Fix image wrapper height, and remove fixed width to image and set a max height so it's all cropped nicely

--- a/client/templates/building/building.styl
+++ b/client/templates/building/building.styl
@@ -183,6 +183,7 @@
       display inline-block
 
   .building-img-wrap
+    height 500px
     max-width 800px
     a.recommend-toggle
       color #FFF
@@ -194,7 +195,8 @@
       &.active, &:hover
         color #FFEC00
     .building-img
-      width 100%
+      margin 0 auto
+      max-height 500px
     .carousel-control
       height 100%
       .building-img-icon
